# pokedex

./: README.md  pyproject.toml  pytest.ini
core/: settings.py  urls.py
pokedex/: admin.py  urls.py
pokedex/api/v1/: __init__.py  evolution.py  move.py  pokemon.py  poketype.py  sprite.py
pokedex/management/commands/: _import_functions.py  import_pokeapi.py  test_import_pokeapi.py
pokedex/migrations/: 0001_initial.py  0002_alter_sprite_back_default_alter_sprite_back_female_and_more.py  0003_alter_pokemon_evolution_tree.py  0004_sprite_back_shiny.py
pokedex/models/: __init__.py  evolution.py  evolutionchain.py  move.py  pokemon.py  poketype.py  sprite.py  test_models.py
pokedex/serializers/: __init__.py  evolution.py  move.py  pokemon.py  poketype.py  sprite.py
pokedex/templates/: auth_user.html  base.html  logout.html  pokemon_delete.html  pokemon_detail.html  pokemon_form.html  pokemon_list.html  register_user.html
pokedex/templatetags/: pokedex.py
pokedex/views/: __init__.py  login.py  pokemon.py  register.py
