[project]
name = "mugna-pokedex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.2",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.0",
    "pokebase>=1.4.1",
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
]
